test/library/standard/Sort/errors/errors-comparator.keyandkeypart.good
errors-comparator.chpl:9: In function 'main':
errors-comparator.chpl:17: error: keyAndKeyPart contains both a key method and a keyPart method
